fix: Unit test coverage